 FIXED  : Ticket #965, Add Full File Path Parameter to Status.html
 FIXED  : Ticket #989, Sliders at options are consistent with volume slider.
          Scroll/button up will move slider up (increase the value) while going
          other way, scroll/button down will decrease the value.
 FIXED  : Ticket #1029, MPEG-2 Profile detected incorrectly with MPEG splitter
 FIXED  : Ticket #1032, MPC-HC x64 does not work with Flash 64-bit
 FIXED  : Ticket #1059, Don't add files to Windows recent files list when "keep
          history of recently opened files" is unchecked.
 FIXED  : Ticket #1128, Thumbnails wider than 2048p
 FIXED  : Ticket #1157, The mute button had no effect if triggered during startup
 FIXED  : Ticket #1178, Fix OSD messages when toggling "Screen Space Pixel Shader" on/off
 FIXED  : Ticket #1212, Playing "Recent File" clears playlist, even though playlist
          contains file
 FIXED  : Ticket #1220, MPC fails to play specific MKV files
 FIXED  : Ticket #1251, If the window is maximized, it will stay maximized when removing
          the caption or the menus. The video frame will be extended rather than reducing
          the size of the window.
 FIXED  : Ticket #1321, IMpegSplitterFilter uses CString - should be WCHAR or BSTR instead
 FIXED  : Ticket #1383, Fix OSD positioning: messages displayed at the top-right of the window
          before going fullscreen were incorrectly positioned after switching to fullscreen
 FIXED  : Ticket #1483, Wrong order of "Video" and "Audio" in "Properties -> Details"
 FIXED  : Ticket #1515, Disable "Disable Desktop composition (Aero)" menu entry on XP
 FIXED  : DVB, Channel switching for H-264 services is more stable now
 FIXED  : Some OSD messages were not translatable


v1.5.1.2903 - 29 February 2011
==============================
 FIXED  : Crash on Sandy Bridge processor


For the older changes see:
http://mpc-hc.svn.sourceforge.net/viewvc/mpc-hc/trunk/src/apps/mplayerc/Changelog_old.txt